# ai-app-lab

./: .gitignore  .licenserc.yaml  ARK_LICENSE.md  Dockerfile  Makefile  README.md  README_en.md  browser.py  cdp.py  commitlint.config.ts  index.py  inspecter.py  pyproject.toml  requirements.txt  sensitive_info_result.txt  system_prompt.py  task.py  utils.py
demohouse/animal_recognition/backend/: pyproject.toml  run.sh
demohouse/animal_recognition/backend/src/: config.py  handler.py  main.py  vikingdb_prepare.py
demohouse/chat2cartoon/backend/: .gitignore  index.py  pyproject.toml  requirements.txt
demohouse/chat2cartoon/backend/app/: constants.py  logger.py  message_utils.py  mode.py  output_parsers.py
demohouse/chat2cartoon/backend/app/clients/: __init__.py  ark_console.py  downloader.py  llm.py  t2i.py  tos.py  tts.py  vlm.py
demohouse/chat2cartoon/backend/app/generators/: base.py  factory.py  phase.py
demohouse/chat2cartoon/backend/app/models/: audio.py  film.py  first_frame_description.py  first_frame_image.py  role_description.py  role_image.py  story_board.py  tone.py  video.py  video_description.py
demohouse/chat2cartoon/backend/tests/assets/: duplicate_messages.json  full_messages.json  half_messages.json
demohouse/chat2cartoon/backend/tests/e2e_tests/: common.py  test_full_process.py
demohouse/chat2cartoon/backend/tests/unit_tests/: test_output_parsers.py  test_phase.py
demohouse/computer_use/mcp_server/: Dockerfile  README.md  pyproject.toml  requirements.txt  settings.toml
demohouse/computer_use/mcp_server/src/mcp_server/: main.py
demohouse/computer_use/planner/: README.md  config.toml  pyproject.toml  requirements.txt
demohouse/computer_use/planner/src/planner/: app.py  main.py
demohouse/computer_use/tool_server/: README.md  config.toml  main.py  pyproject.toml
demohouse/computer_use/tool_server/common/: config.py  context.py  logger.py
demohouse/computer_use/tool_server/services/: router.py
demohouse/computer_use/tool_server/tools/: base.py  computer.py  computer_pyautogui.py  computer_xdotool.py  constants.py  password.py
demohouse/deep_research/: README.md  client_example.py  deep_research.py  deep_search.py  eval.py  index.py  prompt.py  pyproject.toml  requirements.txt  run_client.py  run_local.py  server.py  utils.py
demohouse/deep_research/search_engine/: __init__.py  mock.py  search_engine.py  tavily.py  volc_bot.py
demohouse/deep_search_mcp/backend/: .gitignore  README.md  mcp_servers_config.json  pyproject.toml  requirements.txt  run.sh  supervisord.conf
demohouse/deep_search_mcp/backend/agent/: agent.py  summary.py  supervisor.py  worker.py
demohouse/deep_search_mcp/backend/config/: config.py
demohouse/deep_search_mcp/backend/deep_search/: deep_search.py
demohouse/deep_search_mcp/backend/models/: events.py  planning.py  request.py  usage.py
demohouse/deep_search_mcp/backend/prompt/: planning.py  summary.py  worker.py
demohouse/deep_search_mcp/backend/server/: bot_server.py  server.py
demohouse/deep_search_mcp/backend/state/: deep_research_state.py  deep_search_state.py  file_state_manager.py  global_state.py
demohouse/deep_search_mcp/backend/supervisord.d/: browser-use-mcp.conf  link-search-mcp.conf  ppt-mcp.conf  sandbox-mcp.conf  tls-mcp.conf  vdb-mcp.conf
demohouse/deep_search_mcp/backend/tools/: browser.py  hooks.py  mock.py  sandbox.py
demohouse/deep_search_mcp/backend/utils/: common.py  context.py  converter.py  message.py  planning_holder.py
demohouse/deepdoubao/backend/: pyproject.toml  run.sh
demohouse/deepdoubao/backend/code/: __init__.py  main.py
demohouse/live_voice_call/backend/: event.py  handler.py  prompt.py  pyproject.toml  service.py  utils.py
demohouse/longterm_memory/backend/: mem0ai-0.1.48.2-py3-none-any.whl  pyproject.toml  run.sh
demohouse/longterm_memory/backend/code/: __init__.py  config.py  main.py  prompt.py
demohouse/mobile-use/mobile_agent/: .env.example  .gitignore  README.md  README_zh.md  app.py  build-vefaas.sh  config.toml  main.py  pyproject.toml  requirements.txt  run.sh
demohouse/mobile-use/mobile_agent/script/: ci.py
demohouse/shop_assist/backend/: README.md  README_EN.md  config.py  main.py  next_question.py  pyproject.toml  quality_inspection.py  requirements.txt  summary.py  utils.py
demohouse/shop_assist/backend/data/: __init__.py  cache.py  orders.py  product.py  rag.py  tracking.py
demohouse/shop_assist/backend/data/docs_en/: Ballet Flat.docx  (+8 more)
demohouse/shop_assist/backend/docs/: faq_example.faq.xlsx  可爱风腰靠垫.docx  小动物靠枕.docx  折叠旋转电动无线充车载支架.docx  栀子花车载香薰.docx  汽车遮阳挡.docx  活性炭车载除味包.docx  车载手机快充普通隐藏式-低价.docx  车载手机超级快充.docx  车载收纳盒.docx  通用型汽车脚垫.docx
demohouse/shop_assist/backend/tests/: rag_test.py
demohouse/shop_assist/backend/tools/: order_check.py  order_refund.py  pack_track.py  tools.py
demohouse/video_analyser/backend/: pyproject.toml
demohouse/video_analyser/backend/code/: config.py  main.py  prompt.py  utils.py
examples/memory_service/: housing_agent_frontend.py  in_memory_example_old.py  main.py  pyproject.toml
examples/memory_service/data/: crawl_listings.py  listings.json  page_dump.html  parse_html_data.py  selenium_script.py
examples/memory_service/data/crawled_listings/: 12924756.md  13539291.md  21583485.md  21826587.md  24027463.md  24945398.md  25218214.md  25336789.md  25449089.md  25508992.md  25520919.md  25586065.md  25591120.md  25614288.md  25614475.md  25614761.md  25614795.md  25614895.md  25614934.md  25615066.md
mcp/server/mcp_server_ark/: .gitignore  README.md  pyproject.toml
mcp/server/mcp_server_knowledgebase/: README.md  pyproject.toml
mcp/server/mcp_server_lark/: Dockerfile  README.md  config.template.yaml  pyproject.toml
mcp/server/mcp_server_tls/: .gitignore  README.md  pyproject.toml
mcp/server/mcp_server_vefaas_browser_use/: README.md  mcp.json  pyproject.toml
mcp/server/mcp_server_vefaas_function/: .gitignore  README.md  mcp.json  pyproject.toml  requirements.txt  sign.py  vefaas_server.py  vefaas_server_test.py
mcp/server/mcp_server_vefaas_sandbox/: README.md  pyproject.toml
(+1845 files in other folders)
