[tool.poetry]
name = "deep-search"
version = "0.1.0"
description = ""
authors = ["liuminghao <liuminghao.lm@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12.0"
arkitect = "^0.1.4"
tavily-python = "^0.5.1"
volcengine-python-sdk = ">=1.0.123"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
