[tool.poetry]
name = "deep-search"
version = "0.1.0"
description = ""
authors = ["liuminghao <liuminghao.lm@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12.0"
arkitect = "^0.1.4"
tavily-python = "^0.5.1"
volcengine-python-sdk = ">=1.0.123"
openpyxl = "^3.1.5"
openai = "^1.63.0"
tiktoken = "0.8.0"
gradio = "^5.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
