[project]
name = "memory-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "arkitect",
    "beautifulsoup4>=4.13.4",
    "firecrawl-py>=2.5.4",
    "python-dotenv>=1.1.0",
    "selenium>=4.32.0",
    "webdriver-manager>=4.0.2",
]

[tool.uv.sources]
arkitect = { workspace = true }
