[tool.poetry]
name = "animal-recognition"
version = "0.1.0"
description = "set up the animal recognition project"
authors = ["lujiakun@bytedance.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12.0"
arkitect = "0.1.8"
volcengine = "1.0.183"
tos = "2.8.1"
volcengine-python-sdk = "1.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
