[project]
name = "agent-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "mcp>=1.6.0",
    "openai>=1.70.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "anthropic>=0.49.0",
    "python-json-logger~=3.3.0"
]
