[project]
name = "deep-search"
version = "0.1.0"
description = "deep search using mcp"
authors = [{ name = "liuminghao", email = "liuminghao.lm@bytedance.com" }]
requires-python = ">=3.12, <4.0"
readme = "README.md"
dependencies = [
    "arkitect>=0.2.0",
    "mcp>=1.4.1,<2",
    "supervisor>=4.2.5,<5",
    "mcp_server_knowledgebase @ git+https://github.com/volcengine/ai-app-lab.git@main#subdirectory=mcp/server/mcp_server_knowledgebase",
    "mcp_server_ark @ git+https://github.com/volcengine/ai-app-lab.git@main#subdirectory=mcp/server/mcp_server_ark",
    "mcp_server_tls @ git+https://github.com/volcengine/ai-app-lab.git@main#subdirectory=mcp/server/mcp_server_tls",
    "mcp_server_vefaas_browser_use @ git+https://github.com/volcengine/mcp-server.git@main#subdirectory=server/mcp_server_vefaas_browser_use",
    "mcp_server_ppt @ git+https://github.com/volcengine/ai-app-lab.git@main#subdirectory=mcp/server/mcp_server_ppt"
]
[dependency-groups]
dev = ["poetry-plugin-export>=1.9.0,<2"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true