[tool.poetry]
name = "live-voice-call"
version = "0.1.0"
description = ""
authors = ["liuminghao <liuminghao.lm@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12.0"
arkitect = ">=0.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
