[project]
name = "mcp-server-ark"
version = "0.1.0"
description = "Arkitect LLM Server with configurable tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.5.0",
    "requests>=2.32.3",
    "volcengine-python-sdk[ark]>=1.0.130",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-ark = "mcp_server_ark.server:main"
