[project]
name = "mcp-server-lark"
version = "0.1.0"
description = "Lark MCP Server"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "lark-oapi (>=1.4.8)",
    "mcp (>=1.3.0)",
    "PyYAML (>=6.0.2)"
]

[project.scripts]
mcp-server-lark = "mcp_server_lark.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]

