[project]
name = "mcp-server-tls"
version = "0.1.0"
description = "MCP server for TLS search_logs API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "volcengine>=1.0.175",
]

[project.scripts]
mcp-server-tls = "mcp_server_tls.server:main"

[[project.authors]]
name = "HeJianing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"