[project]
name = "mcp-server-vefaas-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
]

[project.scripts]
mcp-server-vefaas-sandbox = "mcp_server_vefaas_sandbox.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
